# libpcsc-cpp

./: CMakeLists.txt
include/pcsc-cpp/: pcsc-cpp.hpp
src/: SCardCall.hpp  SmartCard.cpp  listReaders.cpp
